Chore: add get presences and fox some bug
